adds pagination and filter tracks by artist name
