# src/music/tracks/dto/track-request.dto.ts
@@ -1,5 +1,0 @@
-export class TrackRequestDto {
-    name!: string;
-
-    artistName!: string;
-}
